# onnx_shape_inference

./: CMakeLists.txt  README.md  main.cpp  model.onnx
